<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart GPS Logger</string>

    <string name="MinFreq">3</string>
    <string name="MaxFreq">30</string>
    <string name="MinDist">100</string>
    <string name="GpsTimeout">120</string>
    <string name="LocCacheSize">100</string>

    <!-- Preferences -->
    <string name="menu_reclog">Start recording</string>
    <string name="menu_stoplog">Stop recording</string>
    <string name="menu_playlog">See last records on map</string>
    <string name="menu_settings">Settings</string>

    <!-- Preferences -->
    <string name="title_minfreq_preference">minimum frequency</string>
    <string name="dialog_title_minfreq_preference">minimum frequency</string>

    <string name="title_maxfreq_preference">maximum frequency</string>
    <string name="dialog_title_maxfreq_preference">maximum frequency</string>

    <string name="title_mindist_preference">distance tolerance</string>
    <string name="dialog_title_mindist_preference">distance tolerance</string>

    <string name="title_gpstimeout_preference">GPS fix timeout</string>
    <string name="summary_gpstimeout_preference">Default: 120</string>
    <string name="dialog_title_gpstimeout_preference">GPS fix timeout</string>

    <string name="title_locmax_preference">Location cache length</string>
    <string name="dialog_title_locmax_preference">Location cache length</string>

    <string name="title_onboot_preference">Activate logger on boot</string>
    <string name="summary_onboot_preference">Activate logger on boot</string>
</resources>
